upload all files

--- a/products/platingcoating/zincplating/troubleshootingnoncyanidezinc/index.html
+++ b/products/platingcoating/zincplating/troubleshootingnoncyanidezinc/index.html
@@ -234,10 +234,10 @@
           <h3 data-i18n-key="intro_types_h">ประเภทหลัก</h3>
           <ul>
             <li data-i18n-key="intro_acid">
-              <strong>การชุบแบบกรด (Acid Zinc):</strong> เงาสูง เคลือบเร็ว เหมาะชิ้นงานเรียบง่าย; มักใช้ ZnCl<sub>2</sub> + KCl
+              <strong>การชุบแบบกรด (Acid Zinc):</strong> เงาสูง เคลือบเร็ว เหมาะชิ้นงานเรียบง่าย; มักใช้ซิงค์คลอไรด์ + โพแทสเซียมคลอไรด์
             </li>
             <li data-i18n-key="intro_alk">
-              <strong>การชุบแบบด่าง (Alkaline Zinc):</strong> การกระจายตัว (Throwing Power) สูง เหมาะรูปทรงซับซ้อน/ร่องลึก; มักใช้ ZnO + NaOH
+              <strong>การชุบแบบด่าง (Alkaline Zinc):</strong> การกระจายตัว (Throwing Power) สูง เหมาะรูปทรงซับซ้อน/ร่องลึก; มักใช้ซิงค์ออกไซด์ + โซเดียมไฮดรอกไซด์
             </li>
           </ul>
 
@@ -259,12 +259,12 @@
                 <tr>
                   <td data-i18n-key="row_acid_type">แบบกรด</td>
                   <td data-i18n-key="row_acid_pros">✅ เงาสูง อัตราการเคลือบเร็ว</td>
-                  <td data-i18n-key="row_acid_cons">❌ การกระจายตัวสู้แบบด่างได้ไม่ดี</td>
+                  <td data-i18n-key="row_acid_cons">❌ เสมอทั่วทั้งชิ้นงานไม่เท่าแบบด่าง</td>
                 </tr>
                 <tr>
                   <td data-i18n-key="row_alk_type">แบบด่าง</td>
                   <td data-i18n-key="row_alk_pros">✅ ความสม่ำเสมอทั่วชิ้นงาน; ทนกัดกร่อนดี</td>
-                  <td data-i18n-key="row_alk_cons">❌ เงาน้อยกว่าแบบกรด; การล้างคราบอาจท้าทาย</td>
+                  <td data-i18n-key="row_alk_cons">❌ เงาน้อยกว่าแบบกรด; การล้างทำความสะอาดอาจทำได้ยาก</td>
                 </tr>
               </tbody>
             </table>
@@ -332,9 +332,9 @@
               </tr>
             </thead>
             <tbody>
-              <tr><td data-i18n-key="cond_znox">Zinc Oxide (ZnO)</td><td>12</td><td>8–15</td><td data-i18n-key="unit_gpl">กรัม/ลิตร</td></tr>
-              <tr><td data-i18n-key="cond_naoh">Sodium Hydroxide (NaOH)</td><td>120</td><td>100–170</td><td data-i18n-key="unit_gpl">กรัม/ลิตร</td></tr>
-              <tr><td data-i18n-key="cond_ratio">NaOH : Zn</td><td>12 : 1</td><td>12–15 : 1</td><td>-</td></tr>
+              <tr><td data-i18n-key="cond_znox">ซิงค์ออกไซด์</td><td>12</td><td>8–15</td><td data-i18n-key="unit_gpl">กรัม/ลิตร</td></tr>
+              <tr><td data-i18n-key="cond_naoh">โซเดียมไฮดรอกไซด์</td><td>120</td><td>100–170</td><td data-i18n-key="unit_gpl">กรัม/ลิตร</td></tr>
+              <tr><td data-i18n-key="cond_ratio">โซเดียมไฮดรอกไซด์ : ซิงค์</td><td>12 : 1</td><td>12–15 : 1</td><td>-</td></tr>
               <tr><td data-i18n-key="cond_add_a">NCZ 1221 A</td><td>10.0</td><td>8.0–12.0</td><td data-i18n-key="unit_ccl">มล./ลิตร</td></tr>
               <tr><td data-i18n-key="cond_add_b">NCZ 1221 B</td><td>1.0</td><td>0.5–1.5</td><td data-i18n-key="unit_ccl">มล./ลิตร</td></tr>
               <tr><td data-i18n-key="cond_add_c">NCZ 1221 C</td><td>2.0</td><td>1.5–2.5</td><td data-i18n-key="unit_ccl">มล./ลิตร</td></tr>
@@ -370,10 +370,10 @@
 
         <div class="content">
           <ul>
-            <li data-i18n-key="mnt_zn_na">วิเคราะห์ Zn และ NaOH เป็นระยะ; คุม NaOH : Zn ตามชนิดบ่อ</li>
+            <li data-i18n-key="mnt_zn_na">วิเคราะห์ซิงค์ และโซเดียมไฮดรอกไซด์เป็นระยะ; คุมโซเดียมไฮดรอกไซด์ : ซิงค์ ตามชนิดบ่อ</li>
             <li data-i18n-key="mnt_temp">ควบคุมอุณหภูมิ 25–30 °C</li>
-            <li data-i18n-key="mnt_ratio_rack">ถังแขวน: อัตราส่วนแนะนำ ~10 : 1 (NaOH : Zn)</li>
-            <li data-i18n-key="mnt_ratio_barrel">ถังกลิ้ง: อัตราส่วนแนะนำ ~12 : 1 (NaOH : Zn)</li>
+            <li data-i18n-key="mnt_ratio_rack">ถังแขวน: อัตราส่วนแนะนำ ~10 : 1 (โซเดียมไฮดรอกไซด์ : ซิงค์)</li>
+            <li data-i18n-key="mnt_ratio_barrel">ถังกลิ้ง: อัตราส่วนแนะนำ ~12 : 1 (โซเดียมไฮดรอกไซด์ : ซิงค์)</li>
             <li data-i18n-key="mnt_feed">เติมซิงค์ผ่านบ่อพักภายนอกเพื่อความสม่ำเสมอ</li>
             <li data-i18n-key="mnt_ppe">* ควรสวม PPE (ถุงมือ แว่นตานิรภัย หน้ากาก) ระหว่างการทำงาน</li>
           </ul>
@@ -386,7 +386,7 @@
         <div class="content">
           <ul>
             <li data-i18n-key="tr_slow">
-              <strong>ชุบติดช้า:</strong> Zn metal ต่ำหรือยาพื้นมากไป → ปรับ Zn 8–22 g/L; คุมอุณหภูมิ 30–32 °C; ลดความหนาแน่นชิ้นงาน; ตรวจแอโนด/ตู้ไฟ; ตรวจการปนเปื้อนไซยาไนด์
+              <strong>ชุบติดช้า:</strong> ซิงค์ต่ำหรือยาพื้นมากไป → ปรับซิงค์ 8–22 g/L; คุมอุณหภูมิ 30–32 °C; ลดความหนาแน่นชิ้นงาน; ตรวจแอโนด/ตู้ไฟ; ตรวจการปนเปื้อนไซยาไนด์
             </li>
             <li data-i18n-key="tr_burn">
               <strong>ไหม้บริเวณกระแสสูง:</strong> กระแสเกิน/กวนไม่สม่ำเสมอ/คลอไรด์สูงเกิน/อุณหภูมิต่ำ/pH ต่ำ → ปรับพารามิเตอร์ให้อยู่ช่วง
@@ -478,8 +478,8 @@
         intro_p1:"การชุบซิงค์แบบไม่ใช้ไซยาไนด์ (Cyanide-free zinc plating) คือกระบวนการชุบด้วยไฟฟ้าที่ไม่มีสารไซยาไนด์ ซึ่งช่วยลดความเสี่ยงด้านความปลอดภัยและสิ่งแวดล้อม ขณะยังคงคุณภาพการป้องกันสนิมที่ดีเยี่ยม",
         intro_p2:"แนวทางนี้พัฒนาขึ้นเพื่อทดแทนระบบดั้งเดิมที่ใช้ไซยาไนด์เป็นตัวช่วยนำไฟฟ้า โดยระบบไร้ไซยาไนด์นิยมแบ่งเป็น <strong>กรด (Acid Zinc)</strong> และ <strong>ด่าง (Alkaline Zinc)</strong>",
         intro_types_h:"ประเภทหลัก",
-        intro_acid:"<strong>การชุบแบบกรด (Acid Zinc):</strong> เงาสูง เคลือบเร็ว เหมาะชิ้นงานเรียบง่าย; มักใช้ ZnCl<sub>2</sub> + KCl",
-        intro_alk:"<strong>การชุบแบบด่าง (Alkaline Zinc):</strong> การกระจายตัว (Throwing Power) สูง เหมาะรูปทรงซับซ้อน/ร่องลึก; มักใช้ ZnO + NaOH",
+        intro_acid:"<strong>การชุบแบบกรด (Acid Zinc):</strong> เงาสูง เคลือบเร็ว เหมาะชิ้นงานเรียบง่าย; มักใช้ซิงค์คลอไรด์ + โพแทสเซียมคลอไรด์",
+        intro_alk:"<strong>การชุบแบบด่าง (Alkaline Zinc):</strong> การกระจายตัว (Throwing Power) สูง เหมาะรูปทรงซับซ้อน/ร่องลึก; มักใช้ซิงค์ออกไซด์ + โซเดียมไฮดรอกไซด์",
 
         tbl_type:"ประเภท", tbl_pros:"ข้อดี", tbl_cons:"ข้อเสีย",
         row_cf_type:"ไม่ใช้ไซยาไนด์",
@@ -487,10 +487,10 @@
         row_cf_cons:"❌ ควบคุมกระบวนการซับซ้อนกว่าบางระบบ",
         row_acid_type:"แบบกรด",
         row_acid_pros:"✅ เงาสูง อัตราการเคลือบเร็ว",
-        row_acid_cons:"❌ การกระจายตัวสู้แบบด่างได้ไม่ดี",
+        row_acid_cons:"❌ เสมอทั่วทั้งชิ้นงานไม่เท่าแบบด่าง",
         row_alk_type:"แบบด่าง",
         row_alk_pros:"✅ ความสม่ำเสมอทั่วชิ้นงาน; ทนกัดกร่อนดี",
-        row_alk_cons:"❌ เงาน้อยกว่าแบบกรด; การล้างคราบอาจท้าทาย",
+        row_alk_cons:"❌ เงาน้อยกว่าแบบกรด; การล้างทำความสะอาดอาจทำได้ยาก",
 
         features_h:"จุดเด่นของน้ำยา",
         features_lead:"6 ไฮไลต์หลัก",
@@ -504,7 +504,7 @@
         cond_h:"ส่วนผสม & สภาวะทำงาน",
         cond_lead:"สูตรตัวอย่างระบบด่าง (Alkaline Zinc) — ออกแบบให้หน้าต่างการผลิตกว้างและครอบคลุมโหลดหลากหลาย",
         cond_th_item:"รายละเอียด", cond_th_rec:"ค่าสุดเหมาะสม", cond_th_range:"ช่วงค่า", cond_th_unit:"หน่วย",
-        cond_znox:"Zinc Oxide (ZnO)", cond_naoh:"Sodium Hydroxide (NaOH)", cond_ratio:"NaOH : Zn",
+        cond_znox:"ซิงค์ออกไซด์", cond_naoh:"โซเดียมไฮดรอกไซด์", cond_ratio:"โซเดียมไฮดรอกไซด์ : ซิงค์",
         cond_add_a:"NCZ 1221 A", cond_add_b:"NCZ 1221 B", cond_add_c:"NCZ 1221 C",
         cond_temp:"อุณหภูมิ", cond_cd:"ความหนาแน่นกระแส", cond_area:"Cathode : Anode (พื้นที่)",
 
@@ -512,15 +512,15 @@
         add_lead:"การเติมน้ำยา (มล./KAH)",
         add_th_name:"ชื่อผลิตภัณฑ์", add_th_rate:"ปริมาณแนะนำ",
         add_a:"MILLENIUM NCZ 1221 A", add_b:"MILLENIUM NCZ 1221 B", add_c:"MILLENIUM NCZ 1221 C", add_water:"หากคุณภาพน้ำไม่ดี",
-        mnt_zn_na:"วิเคราะห์ Zn และ NaOH เป็นระยะ; คุม NaOH : Zn ตามชนิดบ่อ",
+        mnt_zn_na:"วิเคราะห์ซิงค์ และ โซเดียมไฮดรอกไซด์ เป็นระยะ; คุมโซเดียมไฮดรอกไซด์ : ซิงค์ ตามชนิดบ่อ",
         mnt_temp:"ควบคุมอุณหภูมิ 25–30 °C",
-        mnt_ratio_rack:"ถังแขวน: อัตราส่วนแนะนำ ~10 : 1 (NaOH : Zn)",
-        mnt_ratio_barrel:"ถังกลิ้ง: อัตราส่วนแนะนำ ~12 : 1 (NaOH : Zn)",
+        mnt_ratio_rack:"ถังแขวน: อัตราส่วนแนะนำ ~10 : 1 (โซเดียมไฮดรอกไซด์ : ซิงค์)",
+        mnt_ratio_barrel:"ถังกลิ้ง: อัตราส่วนแนะนำ ~12 : 1 (โซเดียมไฮดรอกไซด์ : ซิงค์)",
         mnt_feed:"เติมซิงค์ผ่านบ่อพักภายนอกเพื่อความสม่ำเสมอ",
         mnt_ppe:"* ควรสวม PPE (ถุงมือ แว่นตานิรภัย หน้ากาก) ระหว่างการทำงาน",
 
         tr_h:"แนวทางแก้ปัญหาเบื้องต้น",
-        tr_slow:"<strong>ชุบติดช้า:</strong> Zn metal ต่ำหรือยาพื้นมากไป → ปรับ Zn 8–22 g/L; คุมอุณหภูมิ 30–32 °C; ลดความหนาแน่นชิ้นงาน; ตรวจแอโนด/ตู้ไฟ; ตรวจการปนเปื้อนไซยาไนด์",
+        tr_slow:"<strong>ชุบติดช้า:</strong> ซิงค์ ต่ำหรือยาพื้นมากไป → ปรับซิงค์ 8–22 g/L; คุมอุณหภูมิ 30–32 °C; ลดความหนาแน่นชิ้นงาน; ตรวจแอโนด/ตู้ไฟ; ตรวจการปนเปื้อนไซยาไนด์",
         tr_burn:"<strong>ไหม้บริเวณกระแสสูง:</strong> กระแสเกิน/กวนไม่สม่ำเสมอ/คลอไรด์สูงเกิน/อุณหภูมิต่ำ/pH ต่ำ → ปรับพารามิเตอร์ให้อยู่ช่วง",
         tr_haze:"<strong>ผิวมัว LCD–กลาง:</strong> ยาเงาน้อย/อุณหภูมิสูงเกิน/คลอไรด์ต่ำหรือสูงเกิน/ปนเปื้อนโลหะหนักหรืออินทรีย์",
         tr_pit:"<strong>เป็นหลุม/ตามด:</strong> ยาเงามากเกิน/คลอไรด์สูง/ปนเปื้อนเหล็กหรือสารอื่น",
@@ -546,8 +546,8 @@
         intro_p1:"Cyanide-free zinc plating uses electrolytes without cyanide to reduce health/environmental risks while maintaining excellent corrosion protection.",
         intro_p2:"It replaces legacy cyanide systems. Cyanide-free approaches are commonly split into <strong>Acid Zinc</strong> and <strong>Alkaline Zinc</strong>.",
         intro_types_h:"Main types",
-        intro_acid:"<strong>Acid zinc:</strong> high brightness and fast rate; best for simple geometries; usually ZnCl<sub>2</sub> + KCl.",
-        intro_alk:"<strong>Alkaline zinc:</strong> high throwing power for complex parts/deep recesses; usually ZnO + NaOH.",
+        intro_acid:"<strong>Acid zinc:</strong> high brightness and fast rate; best for simple geometries; usually Zinc Chloride + Potassium Chloride.",
+        intro_alk:"<strong>Alkaline zinc:</strong> high throwing power for complex parts/deep recesses; usually Zinc oxide + Sodium hydroxide.",
 
         tbl_type:"Type", tbl_pros:"Pros", tbl_cons:"Cons",
         row_cf_type:"Cyanide-free",
@@ -572,7 +572,7 @@
         cond_h:"Composition & Operating window",
         cond_lead:"Example alkaline-zinc recipe — broad process latitude for diverse part loads",
         cond_th_item:"Item", cond_th_rec:"Recommended", cond_th_range:"Range", cond_th_unit:"Unit",
-        cond_znox:"Zinc Oxide (ZnO)", cond_naoh:"Sodium Hydroxide (NaOH)", cond_ratio:"NaOH : Zn",
+        cond_znox:"Zinc oxide", cond_naoh:"Sodium Hydroxide", cond_ratio:"Sodium hydroxide : Zinc",
         cond_add_a:"NCZ 1221 A", cond_add_b:"NCZ 1221 B", cond_add_c:"NCZ 1221 C",
         cond_temp:"Temperature", cond_cd:"Current density", cond_area:"Cathode : Anode (area)",
 
@@ -580,14 +580,14 @@
         add_lead:"Additions (mL/KAH)",
         add_th_name:"Product", add_th_rate:"Suggested dose",
         add_a:"MILLENIUM NCZ 1221 A", add_b:"MILLENIUM NCZ 1221 B", add_c:"MILLENIUM NCZ 1221 C", add_water:"If water quality is poor",
-        mnt_zn_na:"Check Zn and NaOH routinely; keep NaOH : Zn within target by line type",
+        mnt_zn_na:"Check Zinc and Sodium hydroxide routinely; keep Sodium hydroxide : Zinc within target by line type",
         mnt_temp:"Hold temperature 25–30 °C",
-        mnt_ratio_rack:"Rack: ~10 : 1 (NaOH : Zn)", mnt_ratio_barrel:"Barrel: ~12 : 1 (NaOH : Zn)",
+        mnt_ratio_rack:"Rack: ~10 : 1 (Sodium hydroxide : Zinc)", mnt_ratio_barrel:"Barrel: ~12 : 1 (Sodium hydroxide : Zinc)",
         mnt_feed:"Feed zinc via an external make-up tank for consistency",
         mnt_ppe:"* Wear PPE (gloves, safety glasses, respirator) during operations",
 
         tr_h:"Troubleshooting",
-        tr_slow:"<strong>Slow plating:</strong> low Zn or too much carrier → set Zn 8–22 g/L; 30–32 °C; reduce part density; check anodes/rectifier; check cyanide contamination.",
+        tr_slow:"<strong>Slow plating:</strong> low Zinc or too much carrier → set Zinc 8–22 g/L; 30–32 °C; reduce part density; check anodes/rectifier; check cyanide contamination.",
         tr_burn:"<strong>Burning at HCD:</strong> over-current / poor agitation / high chloride / low bath temp / low pH → bring parameters back into range.",
         tr_haze:"<strong>Haze at LCD–mid:</strong> low brightener / too hot / chloride too low or high / heavy-metal or organic contamination.",
         tr_pit:"<strong>Pitting:</strong> over-bright / high chloride / iron or other contamination.",
